<resources>
    <string name="app_name">Diary</string>
    <string name="introduce">记录时光</string>
    <string name="phoneNumber">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="surePassword">请确认密码</string>
    <string name="oldPassword">请输入旧密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="otherLoginMethod">其他登录方式</string>
    <string name="registerAccount">注册账号</string>
    <string name="disrememberPw">忘记密码</string>
    <string name="verificationCode">填写验证码</string>
    <string name="sendVC">获取验证码</string>
    <string name="next">下一步</string>
    <string name="sure">确定</string>
    <string name="tab_pokeball">口袋</string>
    <string name="tab_diary">日记</string>
    <string name="tab_man">我的</string>
    <string name="takePhoto">拍一个</string>
    <string name="album">从相册中选取图片</string>
    <string name="cancel">取消</string>
    <string name="autograph">个性签名</string>
    <string name="dataModification">个人资料修改</string>
    <string name="lock">日记同步至过客</string>
    <string name="pocket">口袋模块</string>
    <string name="collection">我的收藏</string>
    <string name="feedback">反馈</string>'
    <string name="about">关于</string>
    <string name="passwordModification">修改密码</string>
    <string name="signOutLogin">退出登录</string>
    <string name="nickName">呢称</string>
    <string name="suggestion">你的建议：</string>
    <string name="sumbit">提交</string>
    <string name="whole">全部</string>
    <string name="hot">热门</string>
    <string name="mine">我的</string>
    <string name="mood">说说吧</string>
    <string name="write">说说吧！释放自己</string>
    <string name="myCollection">我的收藏</string>
    <string name="writeDiary">写日记</string>
    <string name="want">我想记录......</string>
    <string name="other">其他</string>
    <string name="testCountDown">任务倒计时</string>
    <string name="timeManager">时间管理</string>
</resources>