<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGrey">
        <Button
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/takePhoto"
            android:textColor="@color/lightBlue"
            android:background="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_text_view_height"
            android:background="@color/lightBlue"/>
        <Button
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textColor="@color/lightBlue"
            android:background="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/popup_button"
            android:text="@string/cancel"
            android:textColor="@color/lightBlue"
            android:background="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
 </RelativeLayout>