<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.activity.LoginActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_shape"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:layout_gravity="center"
            android:maxLines="1"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/color_cursor"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_shape"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/color_cursor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otherLoginMethod"
        android:gravity="center"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageButton
            android:id="@+id/qq_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq"
            android:background="#0000"
            />
        <ImageButton
            android:id="@+id/weibo_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weibo"
            android:background="#0000"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disrememberPw"
            android:textColor="@color/black"
            android:layout_gravity="bottom"
            android:layout_marginLeft="100dp"
            android:background="#0000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="@color/black"
            android:layout_gravity="bottom"/>
        <Button
            android:id="@+id/registerAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerAccount"
            android:textColor="@color/black"
            android:layout_gravity="bottom"
            android:background="#0000"/>
    </LinearLayout>
</LinearLayout>
