<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.activity.modificationPassword">
    <android.support.v7.widget.Toolbar
        android:id="@+id/passwordToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:paddingTop="@dimen/padding_top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/passwordModification"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten">

        <EditText
            android:id="@+id/passOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/oldPassword"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/five"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:background="@color/gray"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten">
        <EditText
            android:id="@+id/passTwo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/five"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:background="@color/gray"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:background="@color/white"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten">
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/surePassword"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/five"/>
    </LinearLayout>
    <Button
        android:id="@+id/surePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/nickNameSize"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        android:text="@string/sure"
        android:textSize="@dimen/wordSize"
        />
</LinearLayout>
