<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.activity.RegisterZeroActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarZero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:paddingTop="@dimen/padding_top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_shape"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:hint="@string/phoneNumber"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/color_cursor" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/editTextVC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:textCursorDrawable="@drawable/color_cursor" />
        <Button
            android:id="@+id/buttonVC"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/sendVC"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:id="@+id/oneNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
