<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.activity.FeedbackActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/feedbackToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:paddingTop="@dimen/padding_top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:textSize="@dimen/wordSize"
            android:textColor="@color/lightBlack"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedbackSize"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/ten">
        <EditText
            android:id="@+id/feedbackEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightBlack"
            android:textSize="@dimen/wordSize"
            android:background="@null"
            android:layout_margin="@dimen/five"/>
    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Fifty"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/nickNameSize"
        android:background="@color/lightBlue"
        android:textColor="@color/white"
        android:text="@string/sumbit"
        android:textSize="@dimen/wordSize"
        style="@style/Widget.AppCompat.Button"
        />

</LinearLayout>
