<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diary.activity.modata">
    <android.support.v7.widget.Toolbar
        android:id="@+id/dataToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:paddingTop="@dimen/padding_top"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/dataModification"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickName"
        android:layout_marginTop="@dimen/eleven"
        android:layout_marginLeft="@dimen/ten"
        android:textSize="@dimen/wordSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nickNameSize"
        android:background="@drawable/edit_background"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten">
        <EditText
            android:id="@+id/nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@null"
            android:layout_margin="@dimen/five"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autograph"
        android:layout_marginTop="@dimen/eleven"
        android:layout_marginLeft="@dimen/ten"
        android:textSize="@dimen/wordSize"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/autographSize"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:background="@drawable/edit_background">
        <EditText
            android:id="@+id/modificationAutograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_margin="@dimen/five"/>
    </LinearLayout>
</LinearLayout>
