<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/lightBlue"></View>
    <LinearLayout
        android:id="@+id/ok"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@id/status"
        android:layout_height="?attr/actionBarSize"
        android:padding="0dp"
        android:background="@color/lightBlue">
        <FrameLayout
            android:id="@+id/whole"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true">
            <TextView
                android:id="@+id/wholes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:text="@string/whole"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/myWordSize"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true">
            <TextView
                android:id="@+id/hots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:text="@string/hot"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/myWordSize"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true">
            <TextView
                android:id="@+id/mines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:text="@string/mine"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="@dimen/myWordSize"/>
        </FrameLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.v4.view.ViewPager>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/write"
        app:backgroundTint="@color/lightBlue"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/floatingSize"
        android:layout_marginBottom="@dimen/sixty"
        />
</RelativeLayout>